#
#
# Copyright (C) 2010, Intel Corporation.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms and conditions of the GNU General Public License,
# version 2, as published by the Free Software Foundation.
#
# This program is distributed in the hope it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 59 Temple
# Place - Suite 330, Boston, MA 02111-1307 USA.
#
# Authors:
#       Jeff Zheng	<jeff.zheng@intel.com>
#
# Date Created: 07-07-2010
#	Modified from sample Makefile

AC_INIT([mcts-connman-tests], [1.0.0], [jeff.zheng@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile  src/Makefile src/3G/Makefile src/BT/Makefile src/BM/Makefile src/common/Makefile src/Ethernet/Makefile src/Flight/Makefile src/Profile/Makefile src/Property/Makefile src/Signal/Makefile src/WiFi/Makefile src/Stress/Makefile data/Makefile])
AC_OUTPUT
