# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
#
# Authors:
#       Jenny Cao <jenny.q.cao@intel.com>
#
# Date Created: 09-16-2010
#       Modified from sample Makefile

AC_INIT([mcts-lsw-tests], [1.0.1], [jenny.q.cao@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile  src/Makefile src/core/Makefile src/lastfm/Makefile src/key_mgr/Makefile src/dbus_api/Makefile src/dbus_api/lswdbus/Makefile src/dbus_api/model/Makefile utils/Makefile src/qt/Makefile])
AC_OUTPUT

