# Copyright (C) 2010 Intel Corporation
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
#
# Authors:
#       Elva Fu <elva.fu@intel.com>
#
# Date Created: 07-07-2010
#       Modified from sample Makefile

AC_INIT([mcts-ofono-tests], [1.0.0], [elva.fu@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile  
src/Makefile 
src/aoc/Makefile 
src/emergency_call/Makefile 
src/ussd/Makefile 
src/gprs/Makefile 
src/gsm_string/Makefile 
src/multi_call/Makefile 
src/sim_file/Makefile 
src/sms/Makefile 
src/system/Makefile 
src/call_volume/Makefile 
src/modem/Makefile 
src/networking/Makefile 
src/radio_setting/Makefile 
src/simple_call/Makefile 
src/ss_setting/Makefile
src/smartMessage/Makefile 
src/voicemail/Makefile])
AC_OUTPUT

