#AUTOMAKE_OPTIONS=foreign
#LDFLAGS = -l pulse
#audio_PROGRAMS = pa_event_subscription pa_query_control pa_volume_test
gfx_SCRIPTS = 3dgfx_aiglx_enable.sh 3dgfx_dri_enable.sh 3dgfx_gears_run.sh 3dgfx_dri2_enable.sh 3dgfx_fbo_support.sh 3dgfx_tfp_support.sh
gfxdir = /opt/$(PACKAGE)
EXTRA_DIST = $(gfx_SCRIPTS)

#nobase_bin_SCRIPTS = $(PACKAGE)/PA-001.sh
