# Copyright (C) 2010 Intel Corporation
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
#

#AUTOMAKE_OPTIONS=foreign

baseos_SCRIPTS = helper connectivity_bluetooth_001.sh  drv_audio_003.sh   drv_rtc_002.sh    drv_sdmmc_005.sh   drv_usb_hc_002.sh   drv_usb_network_001.sh  drv_usb_storage_005.sh  system_cpu_001.sh connectivity_ethernet_001.sh   drv_audio_004.sh   drv_sdmmc_001.sh  drv_sdmmc_006.sh   drv_usb_hid_001.sh  drv_usb_storage_001.sh  drv_usb_storage_006.sh connectivity_wlan_001.sh       drv_audio_005.sh   drv_sdmmc_002.sh  drv_sdmmc_007.sh   drv_usb_hid_002.sh  drv_usb_storage_002.sh  drv_usb_storage_007.sh drv_audio_001.sh drv_camera_001.sh  drv_sdmmc_003.sh  drv_sdmmc_008.sh   drv_usb_hub_001.sh  drv_usb_storage_003.sh  drv_usb_storage_008.sh drv_audio_002.sh drv_rtc_001.sh  drv_sdmmc_004.sh  drv_usb_hc_001.sh  drv_usb_hub_002.sh  drv_usb_storage_004.sh  kernel_checkcfg_001.sh 
baseosdir = /opt/$(PACKAGE)
EXTRA_DIST = $(baseos_SCRIPTS)


